[tool.poetry]
name = "rapid iteration tool streamlit"
version = "0.1.0"
description = ""
authors = ["Jinay Shah <jinay@inflorencers.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
pydantic = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
